Fix button alignment

--- a/src/components/revaluation/ReservationRevaluationInfo.module.scss
+++ b/src/components/revaluation/ReservationRevaluationInfo.module.scss
@@ -30,6 +30,7 @@
   border: none;
   background: transparent;
   cursor: pointer;
+  padding: 0 4px;
 
   &:disabled {
     cursor: default;
